"Cabeçalho menu cores alteradas"

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 
                     <li class="menuHamburguer__list02">
                         <a href="#">
-                            <img src="./img/apoio-suporte.png" class="iconParceiros" alt="parceiros">    
+                            <img src="./img/aperto-de-mao-de-parceria.png" class="iconParceiros" alt="parceiros">    
                         Parceiros</a>
                         <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones" hidden></a>
                     </li>
                     <li class="menuHamburguer__list03">
                         <a href="#">
-                            <img src="./img/equipe.png" alt="sobre" class="iconSobreNos">    
+                            <img src="./img/sobre-nos-2.png" alt="sobre" class="iconSobreNos">    
                         Sobre nós</a>
                     </li>
                     <li class="menuHamburguer__list04">
                         <a href="#">
-                            <img src="./img/chamada-telefonica.png" alt="contato" class="iconFaleConosco"> 
+                            <img src="./img/atendimento-ao-cliente.png" alt="contato" class="iconFaleConosco"> 
                         Contato</a>
                     </li>
                 </ul>
