inclusão de video no main

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <h3>DIVISÃO DE FROTAS E INDUSTRIAIS</h3>
         </div>
 
-
-
         <main>
-
+            <video src="./videos/formato celular/comercial-srd-501.mp4" width="360px" height="640px" preload="auto" autoplay>
+                
+            </video>
         </main>
 
     </body>
