--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
 
         <main>
-            <video src="./videos/formato celular/comercial-srd-501.mp4" width="360px" height="640px" preload="auto" autoplay>
-                
+            <video width="360px" height="640px" preload="auto" autostart controls="controls">
+                <source src="./videos/formato celular/comercial-srd-501.mp4">
             </video>
         </main>
 
