--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <main>
-            <video width="360px" height="640px" preload="auto" autoplay muted controls="controls">
+            <video width="360px" height="640px" preload="auto" autoplay muted>
                 <source src="./videos/formato celular/comercial-srd-501.mp4">
             </video>
         </main>
