--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
 
         <main>
-            <video width="360px" height="640px" preload="auto" autoplay muted>
-                <source src="./videos/formato celular/comercial-srd-501.mp4">
+            <video width="360px" height="640px" preload="auto" autoplay muted controls>
+                <source src="./videos/formato celular/comercial-srd-501.mp4" type="video/mp4">
             </video>
         </main>
 
