trabalhando no main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/header.js" defer></script>
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>New Tech Tintas</title>
 </head>
     <body>
@@ -60,9 +61,32 @@
         </div>
 
         <main>
-            <video width="360px" height="640px" preload="auto" autoplay muted controls>
-                <source src="./videos/formato celular/comercial-srd-501.mp4" type="video/mp4">
-            </video>
+            <figure>
+                <video width="360px" height="640px" preload="auto" autoplay muted controls="controls">
+                    <source src="./videos/formato celular/comercial-srd-501.mp4" type="video/mp4">
+                </video>
+                <figcaption hidden>Tinta Pu W-thane Srd 501 da weg frota</figcaption>
+            </figure>
+            
+            <section class="produtoInicial">
+                <figure class="figureLataWeg">
+                    <img src="./img/lata-branca-weg.png" alt="Weg Galão" class="imgLataBrancaWeg">
+                    <figcaption hidden>W-THANE PU SRD 501</figcaption>
+                </figure>
+                <h2 class="tituloSrd501">Tinta PU W-Thane SRD 501 Weg-Frotas</h2>
+                <p class="paragrafoSrd501">Poliuretano Acrílico Dupla Função de secagem rápida, alta resistência anticorrosiva
+                    e ao intemperismo. Produto aceita aplicação em diversos tipos desubstrato: Aço Jateado, Aço Carbono e quente
+                    (Chapa Preta), Aço Carbono Fosfatizado e Galvanizado. Os acabamentos possuem versões desde o Ultra Fosco ao 
+                    Brilhante. Diversas cores disponíveis em nosso sistema tintométrico.
+                </p>
+                <div class="areaBotao">
+                    <button type="button" class="botaoContato">
+                        <img src="./img/whatsapp.png" alt="" class="imgWhatsApp">
+                        <p class="fraseBotao">FAÇA SUA COTAÇÃO</p>
+                    </button>
+                </div>    
+                
+            </section>
         </main>
 
     </body>
