--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./js/header.js" defer></script>
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <title>New Tech Tintas</title>
 </head>
     <body>
@@ -119,7 +120,46 @@
                 </div>    
 
             </section>
+
+            
+
         </main>
+
+        <footer>
+            
+            <section class="redesSociais">
+                <h3 class="redesSociais__titulo">Redes Sociais</h3>
+                <ul class="redesSociais__lista">
+                    <li>
+                        <a href="#"><img src="./img/facebook.png" alt="facebook" class="facebook__img"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./img/instagram.png" alt="instagram" class="instagram__img"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./img/linkedin.png" alt="linkedin" class="linkedin__img"></a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="secaoGuia">
+                <ul class="secaoGuia__lista">
+                    <li><a href="#">Duvidas</a></li>
+                    <li><a href="#">Área p/ Profissionais</a></li>
+                    <li><a href="#">Área Técnica</a></li>
+                </ul>
+                <ul class="secaoGuia__lista2">
+                    <li><a href="#">Consulta de cores</a></li>
+                    <li><a href="#">Trabalhe Conosco</a></li>
+                    <li><a href="#">Compliance</a></li>
+                </ul>    
+            </section>
+
+            <section class="direitos">
+                <img src="./img/direito-autoral-3.png" alt="direitos autorais" class="direito__img" hidden>
+                <p class="direito__texto">® Todos os direitos reservados a New Tech Tintas</p>
+            </section>
+        </footer>
 
     </body>
 </html>
