link das redes sociais

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
                 <h3 class="redesSociais__titulo">Redes Sociais</h3>
                 <ul class="redesSociais__lista">
                     <li>
-                        <a href="#"><img src="./img/facebook.png" alt="facebook" class="facebook__img"></a>
+                        <a href="https://www.facebook.com/New-Tech-Tintas-110253030658976"><img src="./img/facebook.png" alt="facebook" class="facebook__img"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./img/instagram.png" alt="instagram" class="instagram__img"></a>
+                        <a href="https://www.instagram.com/newtechtintas/"><img src="./img/instagram.png" alt="instagram" class="instagram__img"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="./img/linkedin.png" alt="linkedin" class="linkedin__img"></a>
+                        <a href="https://www.linkedin.com/company/new-tech-com%C3%A9rcio-de-tintas/"><img src="./img/linkedin.png" alt="linkedin" class="linkedin__img"></a>
                     </li>
                 </ul>
             </section>
