inclusão de novos recursos para IOS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="application-name" content="MyApp" />
+    <meta name="apple-mobile-web-app-title" content="MyApp" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" href="/icon.png" />
     <script src="./js/header.js" defer></script>
     <script src="./js/buscador.js" defer></script>
     <link rel="stylesheet" href="./css/header.css">
@@ -136,6 +143,10 @@
             <section class="secaoNadaEncontrado" hidden>
                 <h3 class="msgNadaEncontrado">Desculpe, não encontramos nada referente.</h3>
             </section>
+
+            <div class="divTeste">
+                
+            </div>
 
             <!--CAMPO DE RESULTADOS DO BUSCADOR 2-->
             <section class="secaoResultados">
