inclusão de novas paginas e config em app.js

--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="MyApp" />
     <meta name="apple-mobile-web-app-title" content="MyApp" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="apple-touch-icon" href="/icon.png" />
-    <script src="./js/header.js" defer></script>
-    <script src="./js/buscador.js" defer></script>
-    <link rel="stylesheet" href="./css/header.css">
+    <script src="../js/header.js" defer></script>
+    <script src="../js/buscador.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./index-css/header.css">
+    <link rel="stylesheet" href="./index-css/main.css">
+    <link rel="stylesheet" href="./index-css/footer.css">
     <title>New Tech Tintas</title>
 </head>
     <body>
@@ -37,23 +36,23 @@
             <nav class="menuHamburguer" hidden>
                 <ul class="menuHamburguer__list">
                     <li class="menuHamburguer__list01">
-                        <a href="#">
+                        <a href="/produtos">
                         <img src="./img/lata-branca-weg.png" class="iconProduto" alt="produtos">
                         Produtos</a>
                     </li>
                     <li class="menuHamburguer__list02">
-                        <a href="#">
+                        <a href="/parceiros">
                             <img src="./img/aperto-de-mao-de-parceria.png" class="iconParceiros" alt="parceiros">    
                         Parceiros</a>
                         <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones" hidden></a>
                     </li>
                     <li class="menuHamburguer__list03">
-                        <a href="#">
+                        <a href="/sobrenos">
                             <img src="./img/sobre-nos-2.png" alt="sobre" class="iconSobreNos">    
                         Sobre nós</a>
                     </li>
                     <li class="menuHamburguer__list04">
-                        <a href="#">
+                        <a href="/contato">
                             <img src="./img/atendimento-ao-cliente.png" alt="contato" class="iconFaleConosco"> 
                         Contato</a>
                     </li>
