--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&display=swap" rel="stylesheet">
-    <title>Produtos</title>
+    <title>Contato</title>
 </head>
     <body>
         <header class="cabecalho">
