--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                 </ul>
             </nav>
 
-            <figure class="logotipo">
+            <figure class="figurelogotipo">
+                <a href="/">
+                    <img src="./img/logo-new-tech-removebg-preview.png" alt="logo" class="logotipo">
+                </a>
                 <figcaption hidden>Logotipo New tech Tintas</figcaption>
             </figure>
 
