--- a/produtos.html
+++ b/produtos.html
@@ -60,10 +60,12 @@
                 </ul>
             </nav>
 
-            <figure class="logotipo">
+            <figure class="figurelogotipo">
+                <a href="/">
+                    <img src="./img/logo-new-tech-removebg-preview.png" alt="logo" class="logotipo">
+                </a>
                 <figcaption hidden>Logotipo New tech Tintas</figcaption>
             </figure>
-
         </header>
 
         <div class="divisoriaHeader">
