Resolvendo problemas com rotas 2

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <script src="./js/header.js" defer></script>
-        <script src="./js/buscador.js" defer></script>
+        <script src="./public/js/header.js" defer></script>
+        <script src="./public/js/buscador.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&display=swap" rel="stylesheet">
-        <link type="text/css" rel="stylesheet" href="./css/header.css">
-        <link type="text/css" rel="stylesheet" href="./css/main.css">
-        <link type="text/css" rel="stylesheet" href="./css/botaoEfeito.css">
-        <link type="text/css" rel="stylesheet" href="./css/footer.css">
+        <link type="text/css" rel="stylesheet" href="./public/css/header.css">
+        <link type="text/css" rel="stylesheet" href="./public/css/main.css">
+        <link type="text/css" rel="stylesheet" href="./public/css/botaoEfeito.css">
+        <link type="text/css" rel="stylesheet" href="./public/css/footer.css">
         <title>New Tech Tintas</title>
     </head>
     
@@ -27,11 +27,11 @@
             
             <div class="iconsCabecalho">
                 <figure class="navegacaoCabecalho">
-                    <img src="./img/hamburger.png" alt="icon-hamburger" class="iconHambuger">
+                    <img src="./public/img/hamburger.png" alt="icon-hamburger" class="iconHambuger">
                 </figure>
 
                 <figure class="closeNavegacao">
-                    <img src="./img/cancel.png" alt="close-box" class="closeIcon" hidden>
+                    <img src="./public/img/cancel.png" alt="close-box" class="closeIcon" hidden>
                 </figure>
             </div>
 
@@ -39,23 +39,23 @@
                 <ul class="menuHamburguer__list">
                     <li class="menuHamburguer__list01">
                         <a href="/produtos">
-                        <img src="./img/lata-branca-weg.png" class="iconProduto" alt="produtos">
+                        <img src="./public/img/lata-branca-weg.png" class="iconProduto" alt="produtos">
                         Produtos</a>
                     </li>
                     <li class="menuHamburguer__list02">
                         <a href="/parceiros">
-                            <img src="./img/aperto-de-mao-de-parceria.png" class="iconParceiros" alt="parceiros">    
+                            <img src="./public/img/aperto-de-mao-de-parceria.png" class="iconParceiros" alt="parceiros">    
                         Parceiros</a>
                         <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones" hidden></a>
                     </li>
                     <li class="menuHamburguer__list03">
                         <a href="/sobrenos">
-                            <img src="./img/sobre-nos-2.png" alt="sobre" class="iconSobreNos">    
+                            <img src="./public/img/sobre-nos-2.png" alt="sobre" class="iconSobreNos">    
                         Sobre nós</a>
                     </li>
                     <li class="menuHamburguer__list04">
                         <a href="/contato">
-                            <img src="./img/atendimento-ao-cliente.png" alt="contato" class="iconFaleConosco"> 
+                            <img src="./public/img/atendimento-ao-cliente.png" alt="contato" class="iconFaleConosco"> 
                         Contato</a>
                     </li>
                 </ul>
@@ -63,7 +63,7 @@
 
             <figure class="figurelogotipo">
                 <a href="/">
-                    <img src="./img/logo-new-tech-removebg-preview.png" alt="logo" class="logotipo">
+                    <img src="./public/img/logo-new-tech-removebg-preview.png" alt="logo" class="logotipo">
                 </a>
                 <figcaption hidden>Logotipo New tech Tintas</figcaption>
             </figure>
@@ -92,7 +92,7 @@
                 <div class="divTituloGaleria">
                     <h2 class="tituloGaleria">Produtos em Destaque</h2>
                 </div>
-                <img src="./img/w-thane-pu-srd-501.png" alt="tinta Srd banner" class="galeria_img01">
+                <img src="./public/img/w-thane-pu-srd-501.png" alt="tinta Srd banner" class="galeria_img01">
             </section>
 
             <section class="secaoNadaEncontrado" hidden>
@@ -110,7 +110,7 @@
                 </figure> -->
 
                 <figure class="figureprodutoInicial">
-                    <img src="./img/lata-branca-weg.png" alt="Weg Galão" class="imgProdutoInicial">
+                    <img src="./public/img/lata-branca-weg.png" alt="Weg Galão" class="imgProdutoInicial">
                     <figcaption hidden>W-THANE PU SRD 501</figcaption>
                 </figure>
                 <h2 class="tituloProdutoInicial">Tinta PU W-Thane SRD 501 Weg-Frotas</h2>
@@ -245,13 +245,13 @@
                 <h3 class="redesSociais__titulo">Redes Sociais</h3>
                 <ul class="redesSociais__lista">
                     <li>
-                        <a href="https://www.facebook.com/New-Tech-Tintas-110253030658976"><img src="./img/facebook.png" alt="facebook" class="facebook__img"></a>
+                        <a href="https://www.facebook.com/New-Tech-Tintas-110253030658976"><img src="./public/img/facebook.png" alt="facebook" class="facebook__img"></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/newtechtintas/"><img src="./img/instagram.png" alt="instagram" class="instagram__img"></a>
+                        <a href="https://www.instagram.com/newtechtintas/"><img src="./public/img/instagram.png" alt="instagram" class="instagram__img"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/new-tech-com%C3%A9rcio-de-tintas/"><img src="./img/linkedin.png" alt="linkedin" class="linkedin__img"></a>
+                        <a href="https://www.linkedin.com/company/new-tech-com%C3%A9rcio-de-tintas/"><img src="./public/img/linkedin.png" alt="linkedin" class="linkedin__img"></a>
                     </li>
                 </ul>
             </section>
@@ -270,7 +270,7 @@
             </section> -->
 
             <section class="direitos">
-                <img src="./img/direito-autoral-3.png" alt="direitos autorais" class="direito__img" hidden>
+                <img src="./public/img/direito-autoral-3.png" alt="direitos autorais" class="direito__img" hidden>
                 <p class="direito__texto">® Todos os direitos reservados a New Tech Tintas</p>
             </section>
         </footer>     
