mudanças nas rotas

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
             <nav class="menuHamburguer" hidden>
                 <ul class="menuHamburguer__list">
                     <li class="menuHamburguer__list01">
-                        <a href="/produtos">
+                        <a href="/routes/produtos.html">
                         <img src="./img/lata-branca-weg.png" class="iconProduto" alt="produtos">
                         Produtos</a>
                     </li>
                     <li class="menuHamburguer__list02">
-                        <a href="/parceiros">
+                        <a href="/routes/parceiros.html">
                             <img src="./img/aperto-de-mao-de-parceria.png" class="iconParceiros" alt="parceiros">    
                         Parceiros</a>
                         <a href="https://www.flaticon.com/br/icones-gratis/do-utilizador" title="do utilizador ícones" hidden></a>
                     </li>
                     <li class="menuHamburguer__list03">
-                        <a href="/sobrenos">
+                        <a href="/routes/sobrenos.html">
                             <img src="./img/sobre-nos-2.png" alt="sobre" class="iconSobreNos">    
                         Sobre nós</a>
                     </li>
                     <li class="menuHamburguer__list04">
-                        <a href="/contato">
+                        <a href="/routes/contato.html">
                             <img src="./img/atendimento-ao-cliente.png" alt="contato" class="iconFaleConosco"> 
                         Contato</a>
                     </li>
