Atualizações do buscador.js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <script src="./js/header.js" defer></script>
-        <script src="./js/buscador.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&display=swap" rel="stylesheet">
@@ -19,6 +17,7 @@
         <link type="text/css" rel="stylesheet" href="./css/main.css">
         <link type="text/css" rel="stylesheet" href="./css/botaoEfeito.css">
         <link type="text/css" rel="stylesheet" href="./css/footer.css">
+        <script src="./js/header.js" defer></script>
         <title>New Tech Tintas</title>
     </head>
     
@@ -274,7 +273,9 @@
                 <p class="direito__texto">® Todos os direitos reservados a New Tech Tintas</p>
             </section>
         </footer>     
-        
+
+        <script src="./js/buscador.js"></script>
+
     </body>
 
 </html>
